<resources>
    <string name="config_import_vcard_type">default</string>
    <string name="config_export_vcard_type">default</string>
    <string name="config_export_dir">/mnt/sdcard</string>
    <string name="config_export_file_prefix" />
    <string name="config_export_file_suffix" />
    <string name="config_export_file_extension">vcf</string>
    <string name="config_export_extensions_to_consider" />
    <string name="config_prohibited_phone_number_regexp" />
    <string name="launcherDialer">Phone</string>
    <string name="people">People</string>
    <string name="t9_default_sort">1</string>
    <string name="t9_sort_title">T9 sorting mode</string>
    <string name="t9_sort_summary">Choose how to filter T9 results</string>
    <string name="t9_sort_name">Name matches first</string>
    <string name="t9_sort_number">Number matches first</string>
    <string name="t9_state_title">Enable T9 dialer</string>
    <string name="t9_state_summary">Enable T9 searching in dialer</string>
    <string name="t9_dial_click_title">Dial selected contact</string>
    <string name="t9_dial_click_summary">Dial the selected contact for T9</string>
    <string name="t9_add_to_contacts">Add to contacts</string>
    <string name="t9_map_row_2">2abcàáâäåɑæçǽćčá</string>
    <string name="t9_map_row_3">3deféèêë</string>
    <string name="t9_map_row_4">4ghiíìïîǵ</string>
    <string name="t9_map_row_5">5jklḱḱĺ</string>
    <string name="t9_map_row_6">6mnoòóöôøñŋǿḿńő</string>
    <string name="t9_map_row_7">7pqrsßɾṕŕśřš</string>
    <string name="t9_map_row_8">8tuvúùüûű</string>
    <string name="t9_map_row_9">9wxyzýẃź</string>
    <string name="contactsList">Contacts</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="contactPickerActivityTitle">Choose a contact</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="viewContactDesription">View contact</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="editGroupDescription">Edit group</string>
    <string name="insertGroupDescription">Create group</string>
    <string name="contactDetailAbout">About</string>
    <string name="contactDetailUpdates">Updates</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_search">Search</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_callNumber">Call %s</string>
    <string name="menu_addStar">Add to favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_splitAggregate">Separate</string>
    <string name="menu_editGroup">Edit</string>
    <string name="menu_deleteGroup">Delete</string>
    <string name="menu_new_contact_action_bar">New</string>
    <string name="menu_new_group_action_bar">New</string>
    <string name="splitConfirmation_title">Separate contact?</string>
    <string name="splitConfirmation">This contact will be separated into multiple contacts.</string>
    <string name="menu_joinAggregate">Join</string>
    <string name="titleJoinContactDataWith">Join contacts</string>
    <string name="blurbJoinContactDataWith">Choose the contact you want to join with %s:</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts joined</string>
    <string name="deleteConfirmation_title">Delete contact?</string>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="readOnlyContactWarning">"You can't delete contacts from read-only accounts, but you can hide them in your contacts lists."</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts lists, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete information from multiple accounts.</string>
    <string name="deleteConfirmation">This contact will be deleted.</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Cancel</string>
    <string name="menu_discard">Discard</string>
    <string name="label_notes">Notes</string>
    <string name="label_sip_address">Internet call</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_title">Title</string>
    <string name="invalidContactMessage">"The contact doesn't exist."</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="pickerNewContactText">Create new contact</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="emailLabelsGroup">Email</string>
    <string name="imLabelsGroup">IM</string>
    <string name="postalLabelsGroup">Address</string>
    <string name="photoPickerNotFoundText">No pictures are available on the phone.</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="send_to_voicemail_checkbox">Send calls directly to voicemail</string>
    <string name="removePhoto">Remove photo</string>
    <string name="noContacts">No contacts.</string>
    <string name="noGroups">No groups.</string>
    <string name="noAccounts">To create groups you need an account.</string>
    <string name="noMatchingContacts">No matching contacts found.</string>
    <string name="noContactsWithPhoneNumbers">No contacts with phone numbers.</string>
    <string name="emptyGroup">No people in this group.</string>
    <string name="addPeopleToGroup">To add some, edit the group.</string>
    <string name="savingContact">Saving contact…</string>
    <string name="savingDisplayGroups">Saving display options…</string>
    <string name="contactSavedToast">Contact saved.</string>
    <string name="contactSavedErrorToast">"Couldn't save contact changes."</string>
    <string name="groupSavedToast">Group saved.</string>
    <string name="groupSavedErrorToast">"Couldn't save group changes."</string>
    <string name="listTotalPhoneContactsZero">No contacts with phone numbers</string>
    <string name="listTotalAllContactsZero">No contacts.</string>
    <string name="listTotalAllContactsZeroCustom">No visible contacts.</string>
    <string name="listTotalAllContactsZeroStarred">No favorites.</string>
    <string name="listTotalAllContactsZeroGroup">No contacts in %s</string>
    <string name="listAllContactsInAccount">Contacts in %s</string>
    <string name="listSingleContact">Single contact</string>
    <string name="listCustomView">Contacts in custom view</string>
    <string name="foundTooManyContacts">More than %d found.</string>
    <string name="listFoundAllContactsZero">None found.</string>
    <string name="contactsAllLabel">All</string>
    <string name="contactsGroupsLabel">Groups</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Phone</string>
    <string name="dialer_ui_title">Dialer settings</string>
    <string name="dialer_ui_orientation_title">Enable sensor orientation</string>
    <string name="dialer_ui_orientation_summary">Rotate dialer based on sensor</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="menu_sendTextMessage">Send text message</string>
    <string name="recentCalls_callNumber">Call %s</string>
    <string name="recentCalls_editNumberBeforeCall">Edit number before call</string>
    <string name="recentCalls_addToContact">Add to contacts</string>
    <string name="recentCalls_removeFromRecentList">Remove from call log</string>
    <string name="recentCalls_deleteAll">Clear call log</string>
    <string name="recentCalls_trashVoicemail">Delete voicemail</string>
    <string name="recentCalls_shareVoicemail">Share voicemail</string>
    <string name="recentCalls_empty">Call log is empty.</string>
    <string name="clearCallLogConfirmation_title">Clear call log?</string>
    <string name="clearCallLogConfirmation">All your call records will be deleted.</string>
    <string name="clearCallLogProgress_title">Clearing call log…</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="voicemail">Voicemail</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="dialerKeyboardHintText">Use keyboard to dial</string>
    <string name="dialerDialpadHintText">Dial to add a call</string>
    <string name="simContacts_emptyLoading">Loading from SIM card…</string>
    <string name="simContacts_title">SIM card contacts</string>
    <string name="noContactsHelpTextWithSyncForCreateShortcut">"You don't have any contacts to display. (If you just added an account, it can take a few minutes to sync contacts.)"</string>
    <string name="noContactsHelpTextForCreateShortcut">"You don't have any contacts to display."</string>
    <string name="noContactsHelpText">"You don't have any contacts to display.

To add contacts, touch "<b><font fgcolor="#ffffffff">Menu</font></b>", then touch:
 
"<b><font fgcolor="#ffffffff"><li>"Accounts to add or set up an account with contacts you can sync to the phone
"</li></font></b>" 
"<b><font fgcolor="#ffffffff"><li>"New contact to create a new contact from scratch
"</li></font></b>" 
"<b><font fgcolor="#ffffffff"><li>"Import/Export to import contacts from your SIM or SD card
"</li></font></b>"
"</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="description_search_button">search</string>
    <string name="description_dial_button">dial</string>
    <string name="description_delete_button">backspace</string>
    <string name="call_settings">Settings</string>
    <string name="menu_contacts_filter">Contacts to display</string>
    <string name="menu_share">Share</string>
    <string name="menu_all_contacts">All contacts</string>
</resources>