<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_dial_action_search" android:id="@id/search_on_action_bar" android:title="@string/menu_all_contacts" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_settings_holo_light" android:id="@id/menu_call_settings" android:orderInCategory="2" android:title="@string/call_settings" android:showAsAction="withText" />
    <item android:id="@id/filter_option" android:title="@string/menu_contacts_filter" android:showAsAction="withText" />
    <item android:id="@id/add_contact" android:title="@string/menu_newContact" android:showAsAction="withText" />
    <item android:id="@id/fake_menu_item" android:showAsAction="ifRoom" android:actionLayout="@layout/empty2" />
</menu>
